test/parse-checks/break-in-loop-3.good
line 4: error: 'break' must be used in a loop
